made the spacing between the list items be different according  to the screen height so it pushes the footer to the bottom, removed the fixed position for big screens

--- a/trow.css
+++ b/trow.css
@@ -66,7 +66,7 @@ li{
 
 
 li {
-    padding-bottom: 30px;
+    padding-bottom: 2.9vh;
     align-items: left;
     justify-content: left;
 }
@@ -234,6 +234,11 @@ hr.bar {
         font-weight: 300;
         margin: 10px 0;
     }
+    li {
+        padding-bottom: 30px;
+        align-items: left;
+        justify-content: left;
+    }
 }
 
 
@@ -249,10 +254,3 @@ hr.bar {
     }
 }
 
-@media only screen and (min-width: 2400px) {
-    footer {
-        position: fixed;
-        bottom:0;
-        width: 100vw
-    }
-}
